--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,16 @@
             <artifactId>vaadin-testbench-junit5</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.anserini</groupId>
+            <artifactId>anserini</artifactId>
+            <version>0.24.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.17.0</version>
+        </dependency>
     </dependencies>
 
     <build>
